# WeekendGo

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: README.md
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  city_coordinates.py  errors.py  tools.py  trip_agent.py
backend/app/api/: dependencies.py  errors.py  routes.py
backend/app/core/: logging.py  settings.py
backend/app/db/: __init__.py  database.py  schema.sql  trip_repository.py
backend/app/llm/: client.py  errors.py  prompts.py
backend/app/mcp/: __init__.py  client.py  config_loader.py  errors.py  models.py  region.py
backend/scripts/: init_db.py  verify_mcp_server.py
backend/tests/: AGENTS.md  test_agent.py  test_api.py  test_database_and_refinement.py  test_mcp_config_loader.py  test_mcp_initialization.py  test_region.py  test_settings.py  test_trip_generation.py  test_trip_models.py  test_trip_repository.py
config/: mcp_config.example.yaml  mcp_config.yaml
docs/: configuration.md  deployment.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  home-client.tsx  layout.tsx  page.tsx
frontend/components/: chat-panel.tsx  history-list.tsx  itinerary-card.tsx  map-view.tsx  status-message.tsx  timeline-view.tsx  trip-form.tsx
frontend/e2e/: home-flow.spec.ts
frontend/lib/: api.ts  city-coordinates.ts
frontend/types/: trip.ts
openspec/: config.yaml
scripts/: run_all.sh  run_backend.sh  run_frontend.sh
(+22 files in other folders)
